--- a/app/views/app-vistaOrdenVInd.html
+++ b/app/views/app-vistaOrdenVInd.html
@@ -1,4 +1,4 @@
-    <style type="text/css">
+<style type="text/css">
 .borde-input
 {
   border-style: solid;
@@ -116,7 +116,7 @@ hr{    border-top-color: #455A64}
             <div class="col-sm-12 bor-tab">
               <table class="table table-hover">
                 <thead>
-                  <tr>
+                  <tr class="info">
                     <th>Almacen</th>
                     <th>Producto</th>
                     <th>Cantidad</th>
