--- a/app/views/login.html
+++ b/app/views/login.html
@@ -33,7 +33,7 @@
             
             <div class="panel-footer">
               <div class="clearfix">
-                <input type="submit" class="btn btn-primary pull-right" value="Entrar">
+                <input type="submit" class="btn btn-primary pull-right" value="Entrar" style="background-color:#93351F;border-color:#93351F;">
               </div>
             </div>
             </form>
