--- a/app/views/app-editarCliente.html
+++ b/app/views/app-editarCliente.html
@@ -7,46 +7,160 @@
   </ol>
   <div class="page-heading">
     <h1>Editar informacion cliente</h1>
-    
   </div>
-  <div class="tab-content">
-    <form name="personForm3" ng-submit="edit()">
-      <h3> Informaci&oacute;n general</h3>
-      <label for="nomCliEd">Nombre:</label>
-      <input id="nomCliEd" type="text" name="nombre" ng-model="clientes.name" required /><br />
-      <label for="corrCliEd">Correo:</label>
-      <input id="corrCliEd" type="text" name="desc" ng-model="clientes.email" required /><br />
-      <label for="preCLiEd">Precio:</label>
-      <select id="preCLiEd" name="productSupp" class="form-control"  ng-model="clientes.price_id">
-        <option value="">Seleccione el precio a aplicar</option>
-        <option ng-repeat="option in precios " ng-selected="option.id==clientes.price.id" value="{{option.id}}">{{option.name}}</option>
-      </select>
-      <label for="pagCliEd">P&aacute;gina:</label>
-      <input id="pagCliEd" type="text" name="page" ng-model="clientes.website" required /><br />
-      <label for="telCliEd">Tel&eacute;fono:</label>
-      <input id="telCliEd" type="text" name="telefono" ng-model="clientes.phone" required /><br />
-      <br />
-      <h3> Datos Fiscales</h3>
-      <label for="razCliEd">Raz&oacute;n Social:</label>
-      <input id="razCliEd" type="text" name="razon" ng-model="clientes.razonsocial" required /><br />
-      <label for="rfcCliEd">RFC:</label>
-      <input id="rfcCliEd" type="text" name="rfc" ng-model="clientes.rfc" required /><br />
-      <label for="ColCLiEd">Colonia:</label>
-      <input id="ColCLiEd" type="text" name="colonia" ng-model="clientes.neighborhood" required /><br />
-      <label for="CalleCliEd">Calle:</label>
-      <input id="CalleCliEd" type="text" name="calle" ng-model="clientes.street" required /><br />
-      <label for="numCliEd">N&uacute;mero:</label>
-      <input id="numCliEd" type="text" name="numero" ng-model="clientes.number" required /><br />
-      <label for="EntiCliEd">Entidad:</label>
-      <input id="EntiCliEd" type="text" name="entidad" ng-model="clientes.entity" required /><br />
-      <label for="munCLiEd">Municipio:</label>
-      <input id="munCLiEd" type="text" name="municipio" ng-model="clientes.city" required /><br />
-      <label for="cpCLiEd">CP:</label>
-      <input id="cpCLiEd" type="text" name="cp" ng-model="clientes.zipcode" required /><br />
-      <input type="submit" value="Guardar" class="btn btn-primary">
-      <br />
-    </form>    
-  </div>
-
-
+    <div class="container-fluid">
+        <form name="clienteForm" ng-submit="edit()">
+            <div class="tab-pane">
+                <div class="row ">
+                    <div class="col-md-6 borde-input">
+                        <div class="title"><h3> Informaci&oacute;n general</h3></div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="nomCliEd" class="control-label">Nombre:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="nomCliEd" type="text" name="nombre" ng-model="clientes.name" required />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="corrCliEd" class="control-label">Correo:</label>
+                                    
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control"  id="corrCliEd" type="text" name="desc" ng-model="clientes.email" required />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="preCLiEd" class="control-label">Precio:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <select id="preCLiEd" name="productSupp" class="form-control"  ng-model="clientes.price_id">
+                                        <option value="">Seleccione el precio a aplicar</option>
+                                        <option ng-repeat="option in precios " ng-selected="option.id==clientes.price.id" value="{{option.id}}">{{option.name}}</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="pagCliEd" class="control-label">P&aacute;gina:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="pagCliEd" type="text" name="page" ng-model="clientes.website" required />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="telCliEd" class="control-label">Tel&eacute;fono:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="telCliEd" type="text" name="telefono" ng-model="clientes.phone" required />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row top-buffer ">
+                    <div class="col-md-6 borde-input">
+                        <div class="title"><h3> Datos Fiscales</h3></div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="razCliEd" class="control-label">Raz&oacute;n Social:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="razCliEd" type="text" name="razon" ng-model="clientes.razonsocial" required />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="rfcCliEd" class="control-label">RFC:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="rfcCliEd" type="text" name="rfc" ng-model="clientes.rfc" required />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="ColCLiEd" class="control-label">Colonia:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="ColCLiEd" type="text" name="colonia" ng-model="clientes.neighborhood" required />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="CalleCliEd" class="control-label">Calle:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="CalleCliEd" type="text" name="calle" ng-model="clientes.street" required />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="numCliEd" class="control-label">N&uacute;mero:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="numCliEd" type="text" name="numero" ng-model="clientes.number" required />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="EntiCliEd" class="control-label">Entidad:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="EntiCliEd" type="text" name="entidad" ng-model="clientes.entity" required />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="munCLiEd" class="control-label">Municipio:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="munCLiEd" type="text" name="municipio" ng-model="clientes.city" required />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="cpCLiEd" class="control-label">CP:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="cpCLiEd" type="text" name="cp" ng-model="clientes.zipcode" required />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <input type="submit" class="btn btn-primary pull-right" value="Guardar" style="background-color:#93351F;border-color:#93351F;">
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
