--- a/app/views/app-editarDivisa.html
+++ b/app/views/app-editarDivisa.html
@@ -1,23 +1,70 @@
+<style type="text/css">
+    table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+th, td {
+    padding: 15px;
+}
+.borde-input
+{
+  border-style: solid;
+}
+.top-buffer { margin-top:20px; }
+    </style>
 <div ng-controller="CtrlFacturacion">
-  <ol class="breadcrumb">
-    <li class=""><a href="#/">Home</a></li>
-    <li class=""><a href="#/app-vistaFacturacion">Facturacion</a></li>
-    <li class="active"><a href="#">Editar Divisa</a></li>
-  </ol>
-  <div class="page-heading">
-    <h1>Divisa {{currenciesEd.name}}</h1>
-  </div>
-  <div class="tab-content">
-      <form name="personForm2"  ng-submit="editDivisa()">
-        <label for="Divisa3">Divisa:</label>
-        <input id="Divisa3" type="text" name="nombre" ng-model="currenciesEd.shortcut" required /><br />
-        <label for="Nombre3">Nombre:</label>
-        <input id="Nombre3" type="text" name="desc" ng-model="currenciesEd.name" required /><br />
-        <label for="unit3">Cambio:</label>
-        <input id="unit3" type="number" name="unit" ng-model="currenciesEd.unit" required /><br />
-        <br />
-        <input type="submit" value="Guardar" class="btn btn-primary">
-      </form>
-      <br />
-  </div>
+    <ol class="breadcrumb">
+        <li class=""><a href="#/">Home</a></li>
+        <li class=""><a href="#/app-vistaFacturacion">Facturacion</a></li>
+        <li class="active"><a href="#">Editar Divisa</a></li>
+    </ol>
+    <div class="page-heading">
+        <h1>Divisa {{currenciesEd.name}}</h1>
+    </div>
+    <div class="container-fluid">
+         <form name="personForm2"  ng-submit="editDivisa()">
+            <div class="tab-pane">
+                <div class="row top-buffer ">
+                    <div class="col-md-6 borde-input">
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="Divisa3">Divisa:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="Divisa3" type="text" name="nombre" ng-model="currenciesEd.shortcut" required />
+                                </div>
+                            </div>  
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="Nombre3">Nombre:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="Nombre3" type="text" name="desc" ng-model="currenciesEd.name" required />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="unit3">Cambio:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="unit3" type="number" name="unit" ng-model="currenciesEd.unit" required />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <input type="submit" class="btn btn-primary pull-right" value="Guardar" style="background-color:#93351F;border-color:#93351F;">
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+
 </div>
