--- a/app/views/app-editarImpuesto.html
+++ b/app/views/app-editarImpuesto.html
@@ -1,3 +1,17 @@
+<style type="text/css">
+    table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+th, td {
+    padding: 15px;
+}
+.borde-input
+{
+  border-style: solid;
+}
+.top-buffer { margin-top:20px; }
+    </style>
 <div ng-controller="CtrlFacturacion">
   <ol class="breadcrumb">
     <li class=""><a href="#/">Home</a></li>
@@ -7,16 +21,43 @@
   <div class="page-heading">
     <h1>Impuesto {{taxesEd.name}}</h1>
   </div>
-  <div class="tab-content">
-      <form name="personForm2"  ng-submit="editTax()">
-        <label for="Nombre">Nombre:</label>
-        <input id="Nombre" type="text" name="nombre" ng-model="taxesEd.name" required /><br />
-        <label for="porc">Porcentage:</label>
-        <input id="porc" type="text" name="porc" ng-model="taxesEd.percentage" required /><br />
-        
-        <br />
-        <input type="submit" value="Guardar" class="btn btn-primary">
-      </form>
-      <br />
-  </div>
+    <div class="container-fluid">
+         <form name="TaxEdForm"  ng-submit="editTax()">
+            <div class="tab-pane">
+                <div class="row top-buffer ">
+                    <div class="col-md-6 borde-input">
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="Nombre">Nombre:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control"id="Nombre" type="text" name="nombre" ng-model="taxesEd.name" required />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="porc">Porcentage:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control" id="porc" type="text" name="porc" ng-model="taxesEd.percentage" required />
+                                </div>
+                            </div>
+                            
+                            
+                        </div>
+                        
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <input type="submit" class="btn btn-primary pull-right" value="Guardar" style="background-color:#93351F;border-color:#93351F;">
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
+
