--- a/app/views/app-editarMarcas.html
+++ b/app/views/app-editarMarcas.html
@@ -1,3 +1,17 @@
+<style type="text/css">
+    table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+th, td {
+    padding: 15px;
+}
+.borde-input
+{
+  border-style: solid;
+}
+.top-buffer { margin-top:20px; }
+    </style>
 <div ng-controller="EditCtrl">
   <ol class="breadcrumb">
     <li class=""><a href="#/">Home</a></li>
@@ -8,16 +22,29 @@
   <div class="page-heading">
     <h1>Marca {{marcaUProxy.name}}</h1>
   </div>
-  <div class="tab-content">
-    
-      <form name="personForm2"  ng-submit="editTest(marcaUProxy)">
-         
-        <label for="NomEdMar">Nombre:</label>
-        <input id="NomEdMar" type="text" name="name" ng-model="marcaUProxy.name" required /><br />
-        
-        <br />
-        <input type="submit" value="Guardar" class="btn btn-primary">
-      </form>
-      <br />
-  </div>
+    <div class="container-fluid">
+         <form name="EdMarcaForm"  ng-submit="editTest(marcaUProxy)">
+            <div class="tab-pane">
+                <div class="row top-buffer ">
+                    <div class="col-md-6 borde-input">
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="NomEdMar">Nombre:</label>
+                                </div>
+                                <div class="col-md-8">
+                                    <input class="form-control"  id="NomEdMar" type="text" name="name" ng-model="marcaUProxy.name" required />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <input type="submit" class="btn btn-primary pull-right" value="Guardar" style="background-color:#93351F;border-color:#93351F;">
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
