--- a/app/views/app-nuevoProducto.html
+++ b/app/views/app-nuevoProducto.html
@@ -53,7 +53,7 @@
         </div>
         <div class="row">
           <div class="col-sm-6">
-            <button class="btn-primary btn">Crear producto</button>
+                <input type="submit" class="btn btn-primary pull-right" value="Crear Producto" style="background-color:#93351F;border-color:#93351F;">
           </div>
         </div>
       </div>
