--- a/app/views/app-vistaTransferencias.html
+++ b/app/views/app-vistaTransferencias.html
@@ -1,3 +1,7 @@
+<style type="text/css">
+.bor-tab{border-style: solid;
+    border-width: 1px;}
+</style>
 <div ng-controller="CtrlTransferencias">
     <ol class="breadcrumb">
         <li class=""><a href="#/">Home</a></li>
@@ -15,7 +19,7 @@
     <div class="tab-content" >
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-12">   
+                <div class="col-md-12 bor-tab">   
                     <table class="table table-hover">
                         <thead>
                             <tr class="info">
